cabal-version:          2.2

-- http://haskell.org/cabal/users-guide/

name:                   bcc-sync
version:                10.0.1
synopsis:               The Bcc Sync node
description:            A Bcc node that follows the Bcc chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/The-Blockchain-Company/bcc-db-sync
bug-reports:            https://github.com/The-Blockchain-Company/bcc-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 tbco Engineering Team
maintainer:             operations@blockchain-company.io
copyright:              (c) 2019 tbco
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Bcc.Sync
                        Bcc.Sync.Api
                        Bcc.Sync.Config
                        Bcc.Sync.Config.Aurum
                        Bcc.Sync.Config.Cole
                        Bcc.Sync.Config.Bcc
                        Bcc.Sync.Config.Node
                        Bcc.Sync.Config.Sophie
                        Bcc.Sync.Config.Types
                        Bcc.Sync.Database
                        Bcc.Sync.DbAction
                        Bcc.Sync.Error

                        Bcc.Sync.LedgerEvent
                        Bcc.Sync.LedgerState

                        Bcc.Sync.Era.Cole.Util
                        Bcc.Sync.Era.Bcc.Util

                        Bcc.Sync.Era.Sophie.Generic
                        Bcc.Sync.Era.Sophie.Generic.EpochUpdate
                        Bcc.Sync.Era.Sophie.Generic.ProtoParams
                        Bcc.Sync.Era.Sophie.Generic.Rewards
                        Bcc.Sync.Era.Sophie.Generic.StakeCred
                        Bcc.Sync.Era.Sophie.Generic.StakeDist

                        Bcc.Sync.Metrics
                        Bcc.Sync.Plugin

                        Bcc.Sync.StateQuery
                        Bcc.Sync.Tracing.ToObjectOrphans
                        Bcc.Sync.Types
                        Bcc.Sync.Util

  build-depends:        base                            >= 4.14         && < 4.16
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , bcc-api
                      , bcc-binary
                      , bcc-client
                      , bcc-crypto
                      , bcc-crypto-class
                      , bcc-crypto-wrapper
                      , bcc-db
                      , bcc-ledger-aurum
                      , bcc-ledger-cole
                      , bcc-ledger-core
                      , bcc-ledger-sophie-ma
                      -- Only for some orphan tracing instances.
                      , bcc-node
                      , bcc-prelude
                      , bcc-slotting
                      , cborg
                      , containers
                      , contra-tracer
                      , directory
                      , extra
                      , filepath
                      , tbco-monitoring
                      , io-classes
                      , lifted-base
                      , monad-control
                      , memory
                      , network-mux
                      , pretty-show
                      , shardagnostic-consensus
                      , shardagnostic-consensus-cole
                      , shardagnostic-consensus-bcc
                      , shardagnostic-consensus-sophie
                      , shardagnostic-network
                      , shardagnostic-network-framework
                      , sophie-spec-ledger
                      , small-steps
                      , stm
                      , strict
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , yaml
